// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <GifExpertApp /> Construcción correcta del componente 1`] = `
<Fragment>
  <h2>
    GifExpertApp ! - Curso de React Fernando Herrera
  </h2>
  <hr />
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="homero"
      key="homero"
    />
  </ol>
</Fragment>
`;

exports[`Pruebas en <GifExpertApp /> Debe mostrar una lista de categorias 1`] = `
<Fragment>
  <h2>
    GifExpertApp ! - Curso de React Fernando Herrera
  </h2>
  <hr />
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Homero"
      key="Homero"
    />
    <GifGrid
      category="Bad Bunny"
      key="Bad Bunny"
    />
  </ol>
</Fragment>
`;
